<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_dashboard_black_24px"
            android:title="@string/nav_program"/>
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_dashboard_black_24px"
            android:title="@string/nav_notice"/>
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_books_black_24px"
            android:title="@string/nav_library"/>
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop_black_24px"
            android:title="@string/nav_shop"/>
        <item
            android:id="@+id/nav_accomodation"
            android:icon="@drawable/ic_dashboard_black_24px"
            android:title="@string/nav_accomodation"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_note_black_24px"
            android:title="@string/nav_music"/>
    </group>

</menu>
